# powerctl

./: 0Temp.c  Readme.txt  asound.c  asound.h  cpuload.c  cpuload.cpp  cpuload.h  dmsg.c  dmsg.h  install.sh  main.c  main.cpp  meson.build  powerctl.pro  sysidle.c  sysidle.cpp  sysidle.h
